--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
     "require": {
         "php": "^7.2",
         "cartalyst/support": "^3.0",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^6.0|^7.0"
     },
     "require-dev": {
         "cartalyst/php-cs-fixer-config": "^1.0",
-        "illuminate/cookie": "^6.0",
-        "illuminate/database": "^6.0",
-        "illuminate/events": "^6.0",
-        "illuminate/http": "^6.0",
-        "illuminate/session": "^6.0",
+        "illuminate/cookie": "^6.0|^7.0",
+        "illuminate/database": "^6.0|^7.0",
+        "illuminate/events": "^6.0|^7.0",
+        "illuminate/http": "^6.0|^7.0",
+        "illuminate/session": "^6.0|^7.0",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^8.0"
     },
